// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`albums reducer должен вернуть начальное состояние 1`] = `
Object {
  "albums": Object {
    "beautiful": Object {
      "count": 0,
      "id": "beautiful",
      "name": "Красивые",
    },
    "camera": Object {
      "count": 0,
      "id": "camera",
      "name": "Камера",
    },
    "favorite": Object {
      "id": "favorites",
      "name": "Избранные",
    },
    "geo": Object {
      "id": "geo",
    },
    "screenshots": Object {
      "count": 0,
      "id": "screenshots",
      "name": "Скриншоты",
    },
    "unbeautiful": Object {
      "count": 0,
      "id": "unbeautiful",
      "name": "Разобрать",
    },
    "videos": Object {
      "count": 0,
      "id": "videos",
      "name": "Видео",
    },
  },
  "isLoaded": false,
  "isLoading": true,
}
`;

exports[`albums reducer должен обновить список альбомов 1`] = `
Object {
  "albums": Object {
    "beautiful": Object {
      "count": 0,
      "id": "beautiful",
      "name": "Красивые",
    },
    "camera": Object {
      "count": 0,
      "id": "camera",
      "name": "Камера",
    },
    "screenshots": Object {
      "count": 0,
      "id": "screenshots",
      "name": "Скриншоты",
    },
    "unbeautiful": Object {
      "count": 0,
      "id": "unbeautiful",
      "name": "Разобрать",
    },
    "videos": Object {
      "count": 1,
      "id": "videos",
      "name": "Видео",
    },
  },
  "isLoaded": false,
  "isLoading": true,
}
`;

exports[`albums reducer должен обновить флаги 1`] = `
Object {
  "albums": Object {
    "beautiful": Object {
      "count": 0,
      "id": "beautiful",
      "name": "Красивые",
    },
    "camera": Object {
      "count": 0,
      "id": "camera",
      "name": "Камера",
    },
    "screenshots": Object {
      "count": 0,
      "id": "screenshots",
      "name": "Скриншоты",
    },
    "unbeautiful": Object {
      "count": 0,
      "id": "unbeautiful",
      "name": "Разобрать",
    },
    "videos": Object {
      "count": 0,
      "id": "videos",
      "name": "Видео",
    },
  },
  "isLoaded": true,
  "isLoading": false,
}
`;
